# behavior-data-computation-modeling-for-python

./: README.md  pyproject.toml
tfp_notebook/: 01_rescolar_wagner.ipynb  02_q_learning.ipynb  03_q_learning_ml.ipynb  04_q_learning_map.ipynb  05_q_learning_bayes.ipynb
